--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="styles/enter.css">
+
+   
 </head>
 <body>
-    <div class="container-lg m-5">
-      <div class="row justify-content-center">
 
-        <div class="col-lg-6 g-3 align-items-">
+      <section class="enter-section d-flex justify-content-center">
+        <div class="col-md-4 g-3">
             <img src="assets/undraw_cat_epte.svg" alt="cat" class="img-fluid">
             <a href="home.html">
-                <button class="btn btn-outline-secondary enter-button mt-2">Enter Cashierc</button>
+                <button class="btn btn-outline-secondary enter-button mt-2">Enter</button>
             </a>
          </div>
-      </div>
-
-
-
-    </div>
+      </section>
 </body>
 </html>
