--- a/home.html
+++ b/home.html
@@ -526,15 +526,15 @@
                   </div>
                 </div>
               </div>
-              <div class="row lastRow">
-                <div class="col my-5" data-aos="zoom-out-down">
-                  <div>
+              <div class="row lastRow"  data-aos="zoom-out-down"  >
+                <div class="col my-5">
+                  <div >
                       <img src="icons/OpenmojiRaspberryPi.svg" width="45px">
                       <span class="text-white icon-title ">Raspberry Pi</span>
                   </div>
                 </div>
     
-                <div class="col my-5" data-aos="zoom-out-down">
+                <div class="col my-5">
                     <div>
                         <img src="icons/SimpleIconsDatabricks.svg" width="45px">
                         <span class="text-white icon-title ">Data Engineering Concepts</span>
